<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

   <trunk.doi.base.view.TitleView
       android:id="@+id/tv_title"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:titleText="意见反馈"
       />

    <!-- 反馈类型 -->
    <RelativeLayout
        android:id="@+id/rl_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_80"
        android:background="@drawable/layout_selector_bg">

        <!-- 反馈类型的字 -->
        <TextView
            android:id="@+id/feed_back_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_30"
            android:text="@string/feed_back_type"
            android:textColor="@color/base_text_color"
            android:textSize="@dimen/text_size_28_px" />

        <!-- 功能意见的字 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/px_30"
            android:layout_toLeftOf="@+id/feed_back_right_img"
            android:text="@string/feed_function_opinion"
            android:textColor="@color/base_text_info_color"
            android:textSize="@dimen/text_size_28_px" />

        <ImageView
            android:id="@+id/feed_back_right_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px_20"
            android:src="@mipmap/con_btn_right" />
    </RelativeLayout>

    <!-- 反馈意见输入内容区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_20"
        android:background="@color/white"
        android:minHeight="@dimen/px_350"
        android:orientation="vertical"
        android:padding="@dimen/px_20">

        <EditText
            android:id="@+id/feed_back_input_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/feed_back_input_hint"
            android:maxLines="100"
            android:minHeight="@dimen/px_260"
            android:textColor="@color/base_text_color"
            android:textColorHint="@color/base_search_hint_color"
            android:textSize="@dimen/text_size_28_px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_14"
            android:gravity="right"
            android:maxLength="100"
            android:text="@string/feed_back_input_tv"
            android:textColor="@color/base_search_hint_color"
            android:textSize="@dimen/text_size_28_px" />
    </LinearLayout>

    <!-- 手机号输入 -->
    <EditText
        android:id="@+id/feed_back_phone_input_ed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_80"
        android:layout_marginTop="@dimen/px_20"
        android:background="@color/white"
        android:hint="@string/feed_back_phone_input"
        android:paddingLeft="@dimen/px_30"
        android:textColor="@color/base_text_color"
        android:textColorHint="@color/base_search_hint_color"
        android:textSize="@dimen/text_size_28_px" />



    <TextView
        android:gravity="center"
        android:id="@+id/feed_back_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_90"
        android:layout_marginBottom="@dimen/px_30"
        android:layout_marginLeft="@dimen/px_30"
        android:layout_marginRight="@dimen/px_30"
        android:layout_marginTop="@dimen/px_50"
        android:background="@drawable/layout_selector_bg"
        android:padding="0dp"
        android:text="@string/setting_exit_login"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_30_px" />

</LinearLayout>